Fixed button height and cell alignment on Settings page
Added new class to the remove buttons in both the category and grading schema tables, setting the button height to the same as the input boxes so they are aligned.
Added an !important tag to the vertical-align since it was being overridden.

Issue: SAK-34043

--- a/gradebookng/tool/src/webapp/styles/gradebook-shared.css
+++ b/gradebookng/tool/src/webapp/styles/gradebook-shared.css
@@ -32,7 +32,11 @@
   content: '*';
 }
 
-/* align the input boxes with the remove button in the grading schema table*/
+/* align the input boxes with the remove button in the grading schema table */
 .table>tbody>tr>td {
-	vertical-align: middle;
+	vertical-align: middle !important;
+}
+
+.btn-table {
+	height: 34px;
 }
